--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.0",
+    "jwt-decode": "^3.1.2",
     "ngx-owl-carousel-o": "^16.0.0",
     "primeicons": "^6.0.1",
     "primeng": "^16.0.2",
